--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             <div class="col-12 col-md-4">
               <p>1. Henry Salim (Author & Leader) (00000079925)</p>
               <img
-                src="./images/henry.jpeg"
+                src="./Images/henry.jpeg"
                 class="img-fluid rounded"
                 style="width: 150px"
               /><br />
@@ -369,7 +369,7 @@
             <div class="col-12 col-md-4">
               <p>2. Jennifer Jeo (00000082259)</p>
               <img
-                src="./images/Jeo.jpeg"
+                src="./Images/Jeo.jpeg"
                 class="img-fluid rounded"
                 style="width: 200px"
               /><br />
@@ -383,7 +383,7 @@
             <div class="col-12 col-md-4">
               <p class="mt-3">3. Maulidya Isnaini (00000110172)</p>
               <img
-                src="./images/maul.jpeg"
+                src="./Images/maul.jpeg"
                 class="img-fluid rounded"
                 style="height: 150px; width: 250px"
               />
@@ -395,7 +395,7 @@
             <div class="col-12 col-md-4">
               <p class="mt-3">4. Ben Arief Moggalana (00000081977)</p>
               <img
-                src="./images/Ben.jpg"
+                src="./Images/Ben.jpg"
                 class="img-fluid rounded"
                 style="width: 230px"
               />
