--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     >
       <div class="container">
         <a class="navbar-brand">
-          <img src="images/MoneyBag.png" class="img-fluid" width="60px" />
+          <img src="Images/MoneyBag.png" class="img-fluid" width="60px" />
           Hello, <span class="username fw-bold"></span>!
         </a>
 
